--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Powered by GLOV.js</title>
+    <title>Snake Eyes</title>
     <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no,shrink-to-fit=no,maximum-scale=1.0,minimum-scale=1.0,viewport-fit=cover">
-    <meta name="Description" content="Description goes here" />
+    <meta name="Description" content="Cosmic dungeon crawler with puzzley dice-based combat" />
     <meta charset="utf-8"/>
-    <meta property="og:title" content="Powered by GLOV.js">
-    <meta property="og:description" content="Description goes here">
+    <meta property="og:title" content="Snake Eyes">
+    <meta property="og:description" content="Cosmic dungeon crawler with puzzley dice-based combat">
     <!-- works for FB, maybe Twitter, maybe not: <meta property="og:image" content="img/facebook.png"> -->
-    <meta property="og:image" content="http://www.dashingstrike.com/LudumDare/LDXX/img/facebook.png"> <!-- full path definitely works for twitter, but took a while -->
+    <meta property="og:image" content="http://www.dashingstrike.com/LudumDare/DCJ2024/img/facebook.png"> <!-- full path definitely works for twitter, but took a while -->
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
     <script>
       /* eslint-disable */
       window.time_load_start = Date.now();
@@ -26,7 +27,7 @@
   <body>
     <div id="debug_overlay"><div id="debug" class="noglov"></div></div>
     <canvas id="canvas" moz-opaque="true" tabindex="1"><div id="nocanvas">
-      Description goes here.<br/><br/>
+      Cosmic dungeon crawler with puzzley dice-based combat.<br/><br/>
       Sorry, but your browser does not support WebGL or does not have it enabled.  Please check:<br/>
       <a href="https://get.webgl.org/">get.webgl.org</a> or <a href="http://www.khronos.org/webgl/wiki/Getting_a_WebGL_Implementation" target="_blank">Getting a WebGL Implementation</a>
     </div></canvas>
@@ -34,7 +35,7 @@
       <div id="safearea"></div>
       <div id="nowebgl" class="screenwrap" style="visibility: hidden">
         <div style="padding: 20px">
-          Description goes here.<br/><br/>
+          Cosmic dungeon crawler with puzzley dice-based combat.<br/><br/>
           Error initializing WebGL.<br/>
           Try reloading the page.  If the problem persists, perhaps your browser does not support WebGL or does not have it enabled.  Please check:<br/>
           <a href="https://get.webgl.org/">get.webgl.org</a> or <a href="http://www.khronos.org/webgl/wiki/Getting_a_WebGL_Implementation" target="_blank">Getting a WebGL Implementation</a>
