cache bust Discord

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Snake Eyes">
     <meta property="og:description" content="Cosmic dungeon crawler with puzzley dice-based combat">
     <!-- works for FB, maybe Twitter, maybe not: <meta property="og:image" content="img/facebook.png"> -->
-    <meta property="og:image" content="http://www.dashingstrike.com/LudumDare/DCJ2024/img/facebook.png"> <!-- full path definitely works for twitter, but took a while -->
+    <meta property="og:image" content="http://www.dashingstrike.com/LudumDare/DCJ2024/img/facebook.png?cb=1"> <!-- full path definitely works for twitter, but took a while -->
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
